leanding page update

--- a/client/global.css
+++ b/client/global.css
@@ -108,3 +108,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Hide scrollbar */
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
+}
